--- a/demo/src/main/resources/config/jdbc.properties
+++ b/demo/src/main/resources/config/jdbc.properties
@@ -1,4 +1,4 @@
-jdbc.username=root
-jdbc.password=asd3135
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/emp?characterEncoding=utf-8
+jdbc.username=
+jdbc.password=
+jdbc.driver=org.sqlite.JDBC
+jdbc.url=jdbc:sqlite:../springboot/demo/src/main/resources/test.db
